--- a/css/main.css
+++ b/css/main.css
@@ -331,3 +331,17 @@ body{
 	width: 100%;
 	height: 100%;
 }
+
+.procedure-box{
+  max-width: 500px;
+}
+
+
+.justline{
+  border-right: 0.5rem solid;
+  border-color: green;
+}
+
+.text-red{
+  color: orangered;
+}
