--- a/css/main.css
+++ b/css/main.css
@@ -339,7 +339,8 @@ body{
 
 .justline{
   border-right: 0.5rem solid;
-  border-color: green;
+  border-color: teal;
+
 }
 
 .text-red{
@@ -362,11 +363,19 @@ body{
   background-color: gainsboro;
 }
 
+.bg-red{
+  background-color: #bd2130;
+}
+
+.bg-darkslategray{
+  background-color: darkslategray;
+}
+
 .text-teal{
   color: teal;
 }
 
 .fee-box{
-  max-width: 800px;
+  max-width: 700px;
   min-width: 300px;
 }
